fix for person/[id] on mobile

--- a/app/people/[id]/profile.module.css
+++ b/app/people/[id]/profile.module.css
@@ -1,6 +1,7 @@
 div.root {
   position: relative;
   width: 100%;
+  padding-bottom: 100px;
 }
 
 div.root div.image {
@@ -27,7 +28,7 @@ div.card {
 
 .background-image {
   position: absolute;
-  top: -80px;
+  top: -40px;
   left: 0;
   z-index: 0;
   width: 100%;
